little content fix

--- a/index.html
+++ b/index.html
@@ -19,21 +19,9 @@
     <nav id="navbar" class="navbar has-shadow is-spaced">
  <div class="container">
  <div class="navbar-brand">
-   <a class="navbar-item" href="https://bulma.io">
+   <a class="navbar-item" href="https://languages.abranhe.com">
      <img src="https://github.com/abranhe/programming-languages-logos/raw/master/src/programming-languages.gif">
      <img src="https://cdn.abranhe.com/projects/porgramming-languages-logos/logo.svg">
-   </a>
-
-   <a class="navbar-item is-hidden-desktop" href="https://github.com/abranhe/programming-languages-logos" target="_blank">
-     <span class="icon" style="color: #333;">
-       <i class="fab fa-github"></i>
-     </span>
-   </a>
-
-   <a class="navbar-item is-hidden-desktop" href="https://twitter.com/jgthms" target="_blank">
-     <span class="icon" style="color: #55acee;">
-       <i class="fab fa-lg fa-twitter"></i>
-     </span>
    </a>
 
    <div id="navbarBurger" class="navbar-burger burger" data-target="navMenuMore">
